# BMS

./: README.md
Aditional/: 3380B_curve_fit_for_temp_measurement_bq.sfit  3435B_curve_fit_for_temp_measurement_bq.sfit
BMS/: 5V_sch.kicad_sch  5V_sch.kicad_sch-bak  BMS.kicad_pcb  BMS.kicad_prl  BMS.kicad_pro  BMS.kicad_sch  BMS.kicad_sch-bak  Battery2.kicad_sch  Battery2.kicad_sch-bak  Battery_0-12.kicad_sch  Battery_0-12.kicad_sch-bak  Connectivity.kicad_sch  Connectivity.kicad_sch-bak  Mesurements.kicad_sch  Mesurements_LTC1.kicad_sch  Mesurements_LTC2.kicad_sch  Power.kicad_sch  Power.kicad_sch-bak  Power_12V.kicad_sch-bak  Power_3.3V.kicad_sch  Power_3.3V.kicad_sch-bak  STM_COM_BQ79600.kicad_sch  Temperature_LTC_1.kicad_sch  Temperature_LTC_2.kicad_sch  USB_Con.kicad_sch  bms.txt  fp-info-cache  galvanic_isulation_0.kicad_sch  galvanic_isulation_1.kicad_sch  galvanic_isulation_2.kicad_sch  sym-lib-table  untitled.kicad_sch
Hardware/: 5V_sch.kicad_sch  5V_sch.kicad_sch-bak  BMS.kicad_pcb  BMS.kicad_prl  BMS.kicad_pro  BMS.kicad_sch  BMS.round-tracks-config  Battery2.kicad_sch  Battery_0-12.kicad_sch  Connectivity.kicad_sch  Mesurements_LTC1.kicad_sch  Mesurements_LTC2.kicad_sch  Power.kicad_sch  Power_12V.kicad_sch  Power_3.3V.kicad_sch  STM_COM_BQ79600.kicad_sch  fp-info-cache  fp-lib-table  galvanic_isulation_1.kicad_sch  sym-lib-table  ~BMS.kicad_sch.lck
Software/Components/BQ796XX/: CMakeLists.txt
Software/Components/BQ796XX/Inc/: bq796xx.hpp
Software/Components/BQ796XX/Inc/bq796xx/: crc16ibm.hpp  regs.hpp
Software/Components/BQ796XX/Src/: bq796xx.cpp
(+247 files in other folders)
