set(BQ796XX_LIBRARY_INC 
    ${CMAKE_CURRENT_SOURCE_DIR}/Inc 
)

set(BQ796XX_LIBRARY_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/Src/bq796xx.cpp
)

add_library(BQ796XX_LIBRARY INTERFACE)
# target_include_directories(PUTM_EV_CAN_LIBRARY INTERFACE ${MX_Include_Dirs})
target_include_directories(BQ796XX_LIBRARY INTERFACE ${BQ796XX_LIBRARY_INC})
target_sources(BQ796XX_LIBRARY PUBLIC ${BQ796XX_LIBRARY_SRC})

